--- a/html/index2.html
+++ b/html/index2.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Contêineres Docker</title>
-    <script src="https://unpkg.com/htmx.org@1.7.0"></script>
     <style>
         :root {
             --primary-color: #3498db;
@@ -29,17 +28,13 @@
             text-align: center;
         }
 
-        #container-list, #csv-upload {
+        #container-list {
             max-width: 800px;
             margin: 20px auto;
             background: white;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        #csv-upload {
-            text-align: center;
         }
 
         .container-item {
@@ -90,7 +85,7 @@
             gap: 10px;
         }
 
-        button, .file-input-label {
+        button {
             padding: 8px 15px;
             border: none;
             border-radius: 5px;
@@ -99,7 +94,7 @@
             transition: background-color 0.3s ease;
         }
 
-        button:hover, .file-input-label:hover {
+        button:hover {
             opacity: 0.9;
         }
 
@@ -118,16 +113,6 @@
             color: white;
         }
 
-        .file-input-label {
-            background-color: var(--primary-color);
-            color: white;
-            display: inline-block;
-        }
-
-        #csv-file {
-            display: none;
-        }
-
         .no-containers {
             text-align: center;
             color: #7f8c8d;
@@ -138,16 +123,8 @@
 <body>
     <h1>Gerenciador de Contêineres Docker</h1>
     
-    <div id="csv-upload">
-        <h2>Filtrar Contêineres</h2>
-        <form id="upload-form">
-            <label for="csv-file" class="file-input-label">Escolher arquivo CSV</label>
-            <input type="file" id="csv-file" accept=".csv" />
-            <button type="submit" class="btn-start">Enviar CSV</button>
-        </form>
-    </div>
-
     <div id="container-list">
+        <h2>Lista de Contêineres Filtrados</h2>
         <!-- Os contêineres serão gerados aqui -->
     </div>
 
@@ -158,7 +135,7 @@
                 const data = await response.json();
 
                 const containerList = document.getElementById('container-list');
-                containerList.innerHTML = '<h2>Lista de Contêineres</h2>';
+                containerList.innerHTML = '<h2>Lista de Contêineres Filtrados</h2>';
 
                 if (data.containers && data.containers.length > 0) {
                     data.containers.forEach(container => {
@@ -175,9 +152,9 @@
                             </div>
                             <div class="container-actions">
                                 ${isRunning 
-                                    ? `<button class="btn-stop" onclick="stopContainer('${container.ID}')">Parar</button>` 
-                                    : `<button class="btn-start" onclick="startContainer('${container.ID}')">Iniciar</button>`}
-                                <button class="btn-restart" onclick="restartContainer('${container.ID}')">Reiniciar</button>
+                                    ? `<button class="btn-stop" onclick="stopContainer('${container.Names}')">Parar</button>` 
+                                    : `<button class="btn-start" onclick="startContainer('${container.Names}')">Iniciar</button>`}
+                                <button class="btn-restart" onclick="restartContainer('${container.Names}')">Reiniciar</button>
                             </div>`;
                         containerList.appendChild(div);
                     });
@@ -192,9 +169,9 @@
             }
         }
 
-        async function stopContainer(containerId) {
+        async function stopContainer(containerName) {
             try {
-                const response = await fetch(`http://localhost:8000/containers/${containerId}/stop`, { method: 'POST' });
+                const response = await fetch(`http://localhost:8000/containers/${containerName}/stop`, { method: 'POST' });
                 const result = await response.json();
                 alert(result.message);
                 fetchContainers();
@@ -203,9 +180,9 @@
             }
         }
 
-        async function startContainer(containerId) {
+        async function startContainer(containerName) {
             try {
-                const response = await fetch(`http://localhost:8000/containers/${containerId}/start`, { method: 'POST' });
+                const response = await fetch(`http://localhost:8000/containers/${containerName}/start`, { method: 'POST' });
                 const result = await response.json();
                 alert(result.message);
                 fetchContainers();
@@ -214,9 +191,9 @@
             }
         }
 
-        async function restartContainer(containerId) {
+        async function restartContainer(containerName) {
             try {
-                const response = await fetch(`http://localhost:8000/containers/${containerId}/restart`, { method: 'POST' });
+                const response = await fetch(`http://localhost:8000/containers/${containerName}/restart`, { method: 'POST' });
                 const result = await response.json();
                 alert(result.message);
                 fetchContainers();
@@ -225,30 +202,7 @@
             }
         }
 
-        document.getElementById('upload-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const fileInput = document.getElementById('csv-file');
-            const file = fileInput.files[0];
-            if (file) {
-                const formData = new FormData();
-                formData.append('file', file);
-                try {
-                    const response = await fetch('http://localhost:8000/upload-csv', {
-                        method: 'POST',
-                        body: formData
-                    });
-                    const result = await response.json();
-                    alert(result.message);
-                    fetchContainers();
-                } catch (error) {
-                    console.error('Erro ao enviar CSV:', error);
-                }
-            } else {
-                alert('Por favor, selecione um arquivo CSV.');
-            }
-        });
-
-        // Fetch containers initially
+        // Buscar contêineres inicialmente
         fetchContainers();
     </script>
 </body>
